Time: 3 ms (100.00%) | Memory: 45.2 MB (88.20%) - LeetSync